--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-slot": "^1.1.0",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
